Correção do arquivo

--- a/formulario.html
+++ b/formulario.html
@@ -13,8 +13,8 @@
         <input id="nome" type="nome"/><br>
         <label for="email">Insira seu E-mail: </label>
         <input id="email" type="email"/><br>
-        <label for="email">Insira sua senha: </label>
-        <input id="email" type="email"/><br>
+        <label for="password">Insira sua Senha: </label>
+        <input id="password" type="password"/><br>
         <button type="submit">Realizar Cadastro</button>
     </form>
 </body>
