Correção do diretório das imagens

--- a/site_exercicio_css.html
+++ b/site_exercicio_css.html
@@ -35,7 +35,7 @@
         <h2>Esportes</h2>
         <div class="articles">
             <article>
-                <img src="./futebol.jpg" alt="Bola de futebol no gramado" />
+                <img src="./IMG/futebol.jpg" alt="Bola de futebol no gramado" />
                 <header>
                     <time>13/07/2022 às 12:35</time>
                 </header>
@@ -46,7 +46,7 @@
                 <a href="#" title="Leia a notícia completa">Ler mais</a>
             </article>
             <article>
-                <img src="./futebol-americano.jpg" alt="Jogador de futebol americano correndo com a bola na mão" />
+                <img src="./IMG/futebol-americano.jpg" alt="Jogador de futebol americano correndo com a bola na mão" />
                 <header>
                     <time>13/07/2022 às 12:35</time>
                 </header>
@@ -57,7 +57,7 @@
                 <a href="#" title="Leia a notícia completa">Ler mais</a>
             </article>
             <article>
-                <img src="./basquete.jpg" title="Vista aérea de uma quadra de basquete" />
+                <img src="./IMG/basquete.jpg" title="Vista aérea de uma quadra de basquete" />
                 <header>
                     <time>13/07/2022 às 12:35</time><br>
                 </header>
@@ -75,7 +75,7 @@
             <h2>Economia</h2>
             <div class="articles">
                 <article>
-                    <img src="./dolares.jpg" alt="Muitos dólares" />
+                    <img src="./IMG/dolares.jpg" alt="Muitos dólares" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -86,7 +86,7 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="./euro.jpg" alt="Várias notas de euro" />
+                    <img src="./IMG/euro.jpg" alt="Várias notas de euro" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
